--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@ Released   : 20131223
 			<div class="title">
 				<h2>Maecenas luctus</h2>
 			</div>
-			<p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac suscipit mauris. Proin eu wisi suscipit nulla suscipit interdum.</p>
+			<p>See Hockey Achievements here. Click the Button Below</p>
 			<a href="#" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2>Integer gravida</h2>
 			</div>
-			<p>Proin eu wisi suscipit nulla suscipit interdum. Nullam non wisi a sem semper suscipit eleifend. Donec mattis libero eget urna. Duis  velit ac mauris.</p>
+			<p>See Baseball Achievements Here. Click the Button Below.</p>
 			<a href="#" class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
