--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@ Released   : 20131223
 			<h1><span class="icon icon-cog"></span><a href="#">Cerulean</a></h1>
 			<div id="menu">
 				<ul>
-					<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-					<li><a href="#" accesskey="2" title="">Our Clients</a></li>
-					<li><a href="#" accesskey="3" title="">About Us</a></li>
-					<li><a href="#" accesskey="4" title="">Careers</a></li>
-					<li><a href="#" accesskey="5" title="">Contact Us</a></li>
+					<li class="current_page_item"><a href="#" accesskey="1" title="">MLB</a></li>
+					<li><a href="#" accesskey="2" title="">NBA</a></li>
+					<li><a href="#" accesskey="3" title="">NFL</a></li>
+					<li><a href="#" accesskey="4" title="">NHL</a></li>
+					<li><a href="#" accesskey="5" title="">Other Leagues
+					</a></li>
 				</ul>
 			</div>
 		</div>
@@ -71,7 +72,7 @@ Released   : 20131223
 			<a href="#" class="button">Learn More</a> </div>
 		<div id="tbox4">
 			<div class="title">
-			<h2>NFL</h2>	
+			<h2>NFL</h2>		
 	</div>
 	<div id="portfolio" class="container">
 		<div class="column1">
