--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@ Released   : 20131223
 			<div class="title">
 				<h2>NHL</h2>
 			</div>
-			<p>See Hockey Achievements here. Click the Button Below</p>
-			<a href="#" class="button">Learn More</a> </div>
+			<p>See Hockey Scores here. Click the Button Below</p>
+			<a href="http://espn.go.com/nhl/scoreboard" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2>MLB</h2>
 			</div>
-			<p>See Baseball Achievements Here. Click the Button Below.</p>
+			<p>See Baseball Scores Here. Click the Button Below.</p>
 			<a href="#" class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
-				<h2>NFL</h2>
+				<h2>NBA</h2>
 			</div>
-			<p>See Football Achievements Here. Click the Button Below.</p>
+			<p>See Basketball Scores Here. Click the Button Below.</p>
 			<a href="#" class="button">Learn More</a> </div>
 		<div id="tbox4">
 			<div class="title">
-			<h2>NFL</h2>		
+			<h2>Other</h2>		
 	</div>
 	<div id="portfolio" class="container">
 		<div class="column1">
