--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Released   : 20131223
 <div id="page-wrapper">
 	<div id="page" class="container">
 		<div class="title">
-			<h2>Alex James' Website</h2>
+			<h2>Achievement, Store, and Score. Alex James' sports apparel website, with scores and awards.</h2>
 		</div>
 		<p>This is <strong>Cerulean</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
 	</div>
@@ -57,7 +57,7 @@ Released   : 20131223
 				<h2>NHL</h2>
 			</div>
 			<p>See Hockey Scores here. Click the Button Below</p>
-			<a href="http://espn.go.com/nhl/scoreboard" class="button">Learn More</a> </div>
+			<a href="#" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2>MLB</h2>
