--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Released   : 20131223
 				<h2>MLB</h2>
 			</div>
 			<p>See Baseball Scores Here. Click the Button Below.</p>
-			<a href="#"><img src="http://www.sports-logos-screensavers.com/user/MLB_Logo.jpg" class="button">Learn More</a> </div>
+			<a href="#"> class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
 				<h2>NBA</h2>
