--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ Released   : 20131223
 			<a href="#" class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
-				<h2>NBA</h2>
+				<h2>NFL</h2>
 			</div>
-			<p>See Basketball Scores Here. Click the Button Below.</p>
+			<p>See Football Scores Here. Click the Button Below.</p>
 			<a href="#" class="button">Learn More</a> </div>
 		<div id="tbox4">
 			<div class="title">
