--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Released   : 20131223
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-			<h1><span class="icon icon-cog"></span><a href="#">Cerulean</a></h1>
+			<h1><span class="icon icon-cog"></span><a href="#">Store</a></h1>
 			<div id="menu">
 				<ul>
 					<li class="current_page_item"><a href="#" accesskey="1" title="">MLB</a></li>
@@ -46,7 +46,7 @@ Released   : 20131223
 		<div class="title">
 			<h2>Achievement, Store, and Score. Alex James' sports apparel website, with scores and awards.</h2>
 		</div>
-		<p>This is <strong>Cerulean</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
+		<p>This is <strong>Store</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
 	</div>
 </div>
 <div class="wrapper">
