--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ Released   : 20131223
 		</div>
 		<div class="column4">
 			<div class="box"> <a href="#"><img src="images/scr04.jpg" alt="" class="image image-full" /></a>
-				<h3>Mauris vulputate dolor</h3>
-				<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
+				<h3>Other Soccer Leagues</h3>
+				<p>Bundesliga, Serie A, Ligue 1 and more.</p>
 				<a href="#" class="button button-small">Etiam posuere</a> </div>
 		</div>
 	</div>
