change image height

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Released   : 20131223
 				<a href="#" class="button button-small">La Liga Scores</a> </div>
 		</div>
 		<div class="column4">
-			<div class="box"> <a href="#"><img src="images/scr04.jpg" alt="" class="image image-full" /></a>
+			<div class="box"> <a href="#"><img src="images/scr04.jpg" width="300" height="200" alt="" class="image image-full" /></a>
 				<h3>Other Soccer Leagues</h3>
 				<p>Bundesliga, Serie A, Ligue 1 and more.</p>
 				<a href="#" class="button button-small">Other Soccer Scores</a> </div>
