--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@ Released   : 20131223
 				<h2>NHL</h2>
 			</div>
 			<p>See Hockey Scores here. Click the Button Below</p>
-			<a href="#" class="button">Learn More</a> </div>
+			<a href="#"><img src="http://www.sports-logos-screensavers.com/user/NHL_Logo_New2.jpg" width="300" height="200" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2>MLB</h2>
 			</div>
 			<p>See Baseball Scores Here. Click the Button Below.</p>
-			<a href="#" class="button">Learn More</a> </div>
+			<a href="#"><img src="http://m.mlb.com/assets/images/1/2/8/68407128/cuts/MLB_1280x720_brqulg8m_r2h9hdqq.jpg" width="300" height="200" class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
 				<h2>NFL</h2>
 			</div>
 			<p>See Football Scores Here. Click the Button Below.</p>
-			<a href="#" class="button">Learn More</a> </div>
+			<a href="#"><img src="https://pmcvariety.files.wordpress.com/2013/09/nfl_logo.jpg?w=670&h=377&crop=1" width="300" height="200" class="button">Learn More</a> </div>
 		<div id="tbox4">
 			<div class="title">
 			<h2>Scores From Other Leagues</h2>		
