--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@ Released   : 20131223
 	<div id="page" class="container">
 		<div class="title">
 			<h2>Achievement, Store, and Score. Alex James' sports apparel website, with scores and awards.</h2>
-		</div>
-		<p>This is <strong>Store</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
+		</div></p>
 	</div>
 </div>
 <div class="wrapper">
@@ -63,7 +62,7 @@ Released   : 20131223
 				<h2>MLB</h2>
 			</div>
 			<p>See Baseball Scores Here. Click the Button Below.</p>
-			<a href="#"><img src="http://m.mlb.com/assets/images/1/2/8/68407128/cuts/MLB_1280x720_brqulg8m_r2h9hdqq.jpg" width="300" height="200" class="button">Learn More</a> </div>
+			<a href="#"><img src="http://m.mlb.com/assets/images/1/2/8/68407128/cuts/MLB_1280x720_brqulg8m_r2h9hdqq.jpg" width="300" height="200" class="button">Learn More</a> </div>		
 		<div id="tbox3">
 			<div class="title">
 				<h2>NFL</h2>
