--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Released   : 20131223
 <div id="page-wrapper">
 	<div id="page" class="container">
 		<div class="title">
-			<h2>Achievement, Store, and Score. Alex James' sports apparel website, with scores and awards.</h2>
+			<h2>Store and Score. Alex James' sports apparel website, with scores.</h2>
 		</div></p>
 	</div>
 </div>
