--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@ Released   : 20131223
 <div id="header-wrapper">
 	<div id="header" class="container">
 		<div id="logo">
-			<h1><span class="icon icon-cog"></span><a href="#">Store</a></h1>
+			<h1><span class="icon icon-cog"></span><a href="#">Fantasy Advice</a></h1>
 			<div id="menu">
 				<ul>
+				<div class="dropdown">
+  <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
 					<li class="current_page_item"><a href="#" accesskey="1" title="">MLB</a></li>
 					<li><a href="#" accesskey="2" title="">NBA</a></li>
 					<li><a href="#" accesskey="3" title="">NFL</a></li>
@@ -56,19 +64,19 @@ Released   : 20131223
 				<h2>NHL</h2>
 			</div>
 			<p>See Hockey Scores here. Click the Button Below</p>
-			<a href="#"><img src="http://www.sports-logos-screensavers.com/user/NHL_Logo_New2.jpg" width="300" height="200" class="button">Learn More</a> </div>
+			<a href="#"><img src="http://www.sports-logos-screensavers.com/user/NHL_Logo_New2.jpg" width="300" height="200" class="button"></a> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2>MLB</h2>
 			</div>
 			<p>See Baseball Scores Here. Click the Button Below.</p>
-			<a href="#"><img src="http://m.mlb.com/assets/images/1/2/8/68407128/cuts/MLB_1280x720_brqulg8m_r2h9hdqq.jpg" width="300" height="200" class="button">Learn More</a> </div>		
+			<a href="#"><img src="http://m.mlb.com/assets/images/1/2/8/68407128/cuts/MLB_1280x720_brqulg8m_r2h9hdqq.jpg" width="300" height="200" class="button">See Scores</a> </div>		
 		<div id="tbox3">
 			<div class="title">
 				<h2>NFL</h2>
 			</div>
 			<p>See Football Scores Here. Click the Button Below.</p>
-			<a href="#"><img src="https://pmcvariety.files.wordpress.com/2013/09/nfl_logo.jpg?w=670&h=377&crop=1" width="300" height="200" class="button">Learn More</a> </div>
+			<a href="#"><img src="https://pmcvariety.files.wordpress.com/2013/09/nfl_logo.jpg?w=670&h=377&crop=1" width="300" height="200" class="button">See Scores</a> </div>
 		<div id="tbox4">
 			<div class="title">
 			<h2>Scores From Other Leagues</h2>		
