--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Released   : 20131223
 			<div id="menu">
 				<ul>
 				<div class="dropdown">
-  <button class="dropbtn">Dropdown</button>
+  <button class="dropbtn">MLB</button>
   <div class="dropdown-content">
     <a href="#">Link 1</a>
     <a href="#">Link 2</a>
