--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@ Released   : 20131223
 	RP: Andrew Miller
 	CL: Aroldis Chapman
 		</div>
+		</div>
+</div>
 
 <div id="wrapper2">
 	<div id="tools">
