--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Released   : 20131223
 				<h2>NHL</h2>
 			</div>
 			<p>See Hockey Scores here. Click the Button Below</p>
-			<a href="#"><img src="http://www.sports-logos-screensavers.com/user/NHL_Logo_New2.jpg" width="300" height="200" class="button"></a> </div>
+			<a href="#"><img src="http://www.sports-logos-screensavers.com/user/NHL_Logo_New2.jpg" width="300" height="200" class="button"> <alt="" </a> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2>MLB</h2>
@@ -109,7 +109,7 @@ Released   : 20131223
 
 
 
-	<div id="baseball-fantasy-advice" 
+	<div> id="baseball-fantasy-advice" 
 	<p> Remember, be on the lookout for prospects you have never heard of in Spring Training. Thing about the underrated players. Best players at every position:
 	C: Buster Posey
 	1B: Paul Goldschmidt
@@ -145,3 +145,4 @@ Released   : 20131223
 </div>
 </body>
 </html>
+</div>
