--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Released   : 20131223
 				<h2>NHL</h2>
 			</div>
 			<p>See Hockey Scores here. Click the Button Below</p>
-			<a href="#"><img src="http://www.sports-logos-screensavers.com/user/NHL_Logo_New2.jpg" width="300" height="200" class="button"> <alt="" </a> </div>
+			<a href="#"><img src="http://www.sports-logos-screensavers.com/user/NHL_Logo_New2.jpg" width="300" height="200" alt="" class="button">  </a> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2>MLB</h2>
