--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Released   : 20131223
 	<div id="page" class="container">
 		<div class="title">
 			<h2>Fantasy Scores. Alex James' fantasy advice, with scores.</h2>
-		</div></p>
+		</div><br>
 	</div>
 </div>
 <div class="wrapper">
