--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ Released   : 20131223
 	<div id="page" class="container">
 		<div class="title">
 			<h2>Fantasy Scores. Alex James' fantasy advice, with scores.</h2>
-		</div><br>
-	</div>
+		</div> <br>
+	</div> </br>
 </div>
 <div class="wrapper">
 	<div id="three-column" class="container">
@@ -64,7 +64,7 @@ Released   : 20131223
 				<h2>NHL</h2>
 			</div>
 			<p>See Hockey Scores here. Click the Button Below</p>
-			<a href="#"><img src="http://www.sports-logos-screensavers.com/user/NHL_Logo_New2.jpg" width="300" height="200" alt="" class="button">  </a> </div>
+			<a href="#"> <img src="http://www.sports-logos-screensavers.com/user/NHL_Logo_New2.jpg" width="300" height="200" alt="" class="button"> </a> </img> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2>MLB</h2>
