--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Released   : 20131223
 
 
 
-	<div> id="baseball-fantasy-advice" 
+	<div id="baseball-fantasy-advice" 
 	<p> Remember, be on the lookout for prospects you have never heard of in Spring Training. Thing about the underrated players. Best players at every position:
 	C: Buster Posey
 	1B: Paul Goldschmidt
