--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@ Released   : 20131223
 		<div id="logo">
 			<h1><span class="icon icon-cog"></span><a href="#">Fantasy Advice</a></h1>
 			<div id="menu">
+				<ul>
 				<div class="dropdown">
-  <button class="dropbtn">FANTASY</button>
+  <button class="dropbtn">Dropdown</button>
   <div class="dropdown-content">
-    <a href="#baseball-fantasy-advice">MLB</a>
+    <a href="#">Link 1</a>
     <a href="#">Link 2</a>
     <a href="#">Link 3</a>
   </div>
 </div>
-					<ul>
 					<li class="current_page_item"><a href="#" accesskey="1" title="">MLB</a></li>
 					<li><a href="#" accesskey="2" title="">NBA</a></li>
 					<li><a href="#" accesskey="3" title="">NFL</a></li>
@@ -53,8 +53,8 @@ Released   : 20131223
 	<div id="page" class="container">
 		<div class="title">
 			<h2>Fantasy Scores. Alex James' fantasy advice, with scores.</h2>
-		</div> <br>
-	</div> </br>
+		</div></p>
+	</div>
 </div>
 <div class="wrapper">
 	<div id="three-column" class="container">
@@ -64,7 +64,7 @@ Released   : 20131223
 				<h2>NHL</h2>
 			</div>
 			<p>See Hockey Scores here. Click the Button Below</p>
-			<a href="#"> <img src="http://www.sports-logos-screensavers.com/user/NHL_Logo_New2.jpg" alt="" width="300" height="200" class="button">  </a>  </div>
+			<a href="#"><img src="http://www.sports-logos-screensavers.com/user/NHL_Logo_New2.jpg" width="300" height="200" class="button"></a> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2>MLB</h2>
@@ -105,28 +105,9 @@ Released   : 20131223
 				<h3>Other Soccer Leagues</h3>
 				<p>Bundesliga, Serie A, Ligue 1 and more.</p>
 				<a href="#" class="button button-small">Other Soccer Scores</a> </div>
-	
-
-
-
-	<div id="baseball-fantasy-advice">
-	<p> Remember, be on the lookout for prospects you have never heard of in Spring Training. Think about the underrated players. Best players at every position:
-	C: Buster Posey
-	1B: Paul Goldschmidt
-	2B: Dee Gordon
-	3B: Josh Donaldson
-	SS: Corey Seager
-	LF: Mike Trout
-	CF: Bryce Harper
-	RF: Giancarlo Stanton
-	SP: Clayton Kershaw
-	RP: Andrew Miller
-	CL: Aroldis Chapman
-	</p>
 		</div>
-		</div>
+	</div>
 </div>
-
 <div id="wrapper2">
 	<div id="tools">
 		<div class="title">
@@ -142,15 +123,19 @@ Released   : 20131223
 			<li><a href="#" class="icon icon-lock"></a></li>
 		</ul>
 	
-	<form action="mail.php" method="POST">
-<p>Name</p> <input type="text" name="name">
-<p>Email</p> <input type="text" name="email">
-<p>Message</p><textarea name="message" rows="6" cols="25"></textarea><br />
-<input type="submit" value="Send"><input type="reset" value="Clear">
-</form>
-
 	</div>
+</div>
+<div id="copyright" class="container">
+	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+		<ul class="contact">
+			<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
+			<li><a href="#" class="icon icon-facebook"><span></span></a></li>
+			<li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
+			<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
+			<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
+		</ul>
 </div>
 </body>
 </html>
-</div>
+
+
