--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Released   : 20131223
 
 </head>
 <body>
-<div id="header-wrapper">
+<div id=" ">
 	<div id="header" class="container">
 		<div id="logo">
 			<h1><span class="icon icon-cog"></span><a href="#">Fantasy Advice</a></h1>
@@ -121,10 +121,34 @@ Released   : 20131223
 			<li><a href="#" class="icon icon-cut"></a></li>
 			<li><a href="#" class="icon icon-filter"></a></li>
 			<li><a href="#" class="icon icon-lock"></a></li>
+
+
+
 		</ul>
 	
 	</div>
 </div>
+<div id="fantasy-baseball-advice"
+
+<p>
+Remember to be on the lookout for underrated players.
+</div
+<div id="fantasy-basketball advice"
+<p> The Season is happening. Go for these players at each position:
+PG - Stephen Curry
+SG - James Harden
+SF - LeBron James
+PF - Draymond Green
+C - DeMarcus Cousins
+</div>
+
+<div id="fantasy-football-advice"
+
+<p> Watch out for another JPP incident of players being fools, and getting injured. In the meantime, closely monitor players training. 
+
+</div>
+
+
 <div id="copyright" class="container">
 	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
 		<ul class="contact">
