--- a/index.html
+++ b/index.html
@@ -31,19 +31,35 @@ Released   : 20131223
 			<div id="menu">
 				<ul>
 				<div class="dropdown">
-  <button class="dropbtn">Dropdown</button>
+  <button class="dropbtn">NBA</button>
   <div class="dropdown-content">
     <a href="#">Link 1</a>
     <a href="#">Link 2</a>
     <a href="#">Link 3</a>
-					<li class="current_page_item"><a href="#" accesskey="1" title="">MLB</a></li>
-					<li><a href="#" accesskey="2" title="">NBA</a></li>
-					<li><a href="#" accesskey="3" title="">NFL</a></li>
-					<li><a href="#" accesskey="4" title="">NHL</a></li>
-					<li><a href="#" accesskey="5" title="">Other Leagues
-					</div>
+  </div>
 </div>
-					</a></li>
+<button class="dropbtn">MLB</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
+<button class="dropbtn">NHL</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
+<button class="dropbtn">NFL</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
+					
 				</ul>
 			</div>
 		</div>
