--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Released   : 20131223
 	
 	</div>
 </div>
-<div id="fantasy-baseball-advice"
+<div id="fantasy-baseball-advice">
 
 <p>
 Remember to be on the lookout for underrated players.
