--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Released   : 20131223
 
 </head>
 <body>
-<div id=" ">
+<div id="dropdown">
 	<div id="header" class="container">
 		<div id="logo">
 			<h1><span class="icon icon-cog"></span><a href="#">Fantasy Advice</a></h1>
@@ -33,9 +33,12 @@ Released   : 20131223
 				<div class="dropdown">
   <button class="dropbtn">NBA</button>
   <div class="dropdown-content">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <p> The Season is happening. Go for these players at each position:
+PG - Stephen Curry
+SG - James Harden
+SF - LeBron James
+PF - Draymond Green
+C - DeMarcus Cousins</p>
   </div>
 </div>
 <button class="dropbtn">MLB</button>
@@ -150,16 +153,11 @@ Released   : 20131223
 Remember to be on the lookout for underrated players.
 </p>
 </div>
-<div id="fantasy-basketball advice"
-<p> The Season is happening. Go for these players at each position:
-PG - Stephen Curry
-SG - James Harden
-SF - LeBron James
-PF - Draymond Green
-C - DeMarcus Cousins
+<div id="fantasy-basketball advice">
+
 </div>
 
-<div id="fantasy-football-advice"
+<div id="fantasy-football-advice">
 
 <p> Watch out for another JPP incident of players being fools, and getting injured. In the meantime, closely monitor players training. 
 
