--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@ Released   : 20131223
 				<div class="dropdown">
   <button class="dropbtn">NBA</button>
   <div class="dropdown-content">
-    <p> The Season is happening. Go for these players at each position:
-PG - Stephen Curry
-SG - James Harden
-SF - LeBron James
-PF - Draymond Green
-C - DeMarcus Cousins</p>
+    <p> The Season is happening. Go for these players at each position:</p> <ul>
+  <li>PG - Stephen Curry</li>
+  <li>SG - James Harden</li>
+  <li>SF - LeBron James</li>
+  <li>PF - Draymond Green</li>
+  <li>C - DeMarcus Cousins</li>
+</ul>
+
+
   </div>
 </div>
 <button class="dropbtn">MLB</button>
