--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Remember to be on the lookout for underrated players.
 <div id="copyright" class="container">
 	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
 		<ul class="contact">
-			$emailTo = '<YOUR_EMAIL_HERE>';
+			$emailTo = '<210540@hkis.edu.hk>';
 		</ul>
 </div>
 </body>
